--- a/src/components/ui/price.astro
+++ b/src/components/ui/price.astro
@@ -20,7 +20,7 @@ function localizedPrice(price: number) {
 ---
 
 {
-  priceWithoutVat && priceWithVat ? (
+  priceWithoutVat ? (
     <div class="price-container">
       <p class="without-vat">
         Kaina be PVM:
