--- a/src/components/react/contact-form/contact-form-react.css
+++ b/src/components/react/contact-form/contact-form-react.css
@@ -1,76 +1,7 @@
-.form-group {
-  width: 100%;
-  padding: 0.5rem;
-  display: flex;
-
-  & .input-label {
-    font-size: 1.7rem;
-    font-weight: 400;
-    padding: 1rem;
-    width: 11rem;
-  }
-
-  & .input-group {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-
-  & .input {
-    appearance: none;
-    padding: 1rem;
-    color: var(--color-grey-light);
-    font-size: 1.7rem;
-    font-weight: 300;
-    box-shadow: none;
-    outline: none;
-    background: none;
-    border: 1px solid var(--color-grey-light);
-
-    &:focus {
-      box-shadow: 0 0 5px var(--color-grey-light);
-    }
-  }
-
-  & .textarea {
-    min-height: 83.5px;
-    resize: vertical;
-  }
-
-  @supports (field-sizing: content) {
-    & .textarea {
-      field-sizing: content;
-    }
-  }
-}
-
-.input[aria-invalid="true"],
-.textarea[aria-invalid="true"] {
-  border: 1px solid var(--color-danger);
-  box-shadow: 0 0 3px var(--color-danger);
-
-  &:focus {
-    box-shadow: 0 0 5px var(--color-grey-light);
-  }
-}
-
-.input:-webkit-autofill,
-.input:-webkit-autofill:hover,
-.input:-webkit-autofill:focus,
-.input:-webkit-autofill:active {
-  -webkit-text-fill-color: var(--color-grey-light) !important;
-  -webkit-box-shadow: 0 0 0 1000px var(--color-grey-dark2) inset !important;
-  -webkit-background-clip: text !important;
-  background-clip: text !important;
-}
-
 .button-container {
-  margin-block-start: 2.5rem;
-}
-
-@media only screen and (max-width: 56.25em) {
-  .form-group {
-    flex-direction: column;
-    padding: 0;
-  }
+  /* shift to the right */
+  margin-block-start: 20px;
+  /* center */
+  display: flex;
+  justify-content: end;
 }
