--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,16 @@
 ---
-import About from "@/components/about.astro";
-import Contacts from "@/components/contacts.astro";
 import Footer from "@/components/footer.astro";
 import Header from "@/components/header.astro";
+import "@/styles/normalize.css";
+import "@/styles/global.css";
+import Disclaimer from "@/components/ui/disclaimer.astro";
 
-interface Props {
+type Props = {
   title: string;
-}
+  description: string;
+};
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -18,17 +20,15 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta content="Astro description" name="description" />
     <meta content="width=device-width" name="viewport" />
-    <meta content="Your site description" name="description" />
-    <meta content="your, keywords" name="keywords" />
+    <meta content={description} name="description" />
+    <meta content="brameda, spa, džiovyklė, antbačiai" name="keywords" />
     <meta content={title} property="og:title" />
-    <meta content="Your site description" property="og:description" />
+    <meta content={description} property="og:description" />
     <meta content="website" property="og:type" />
     <meta content={Astro.url} property="og:url" />
     <link href="/sitemap-index.xml" rel="sitemap" />
     <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
-    <link href="/normalize.css" rel="stylesheet" />
-    <link href="/global.css" rel="stylesheet" />
-    <link href="/styles/style.css" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet" />
     <meta content={Astro.generator} name="generator" />
     <title>{title}</title>
   </head>
@@ -36,9 +36,8 @@ const { title } = Astro.props;
     <Header />
     <main id="main">
       <slot />
-      <About />
-      <Contacts />
     </main>
     <Footer />
+    <Disclaimer>Svetaine kuriama ir pildoma</Disclaimer>
   </body>
 </html>
