MAIN lazy-load images in product media and menu button components - optimize loading performance by changing image loading strategy from eager to lazy MAIN remove redundant font import in global styles - streamline CSS by eliminating unnecessary font loading MAIN add preconnect links for Google Fonts in layout - improve font loading speed and performance

--- a/src/components/product/product-media.astro
+++ b/src/components/product/product-media.astro
@@ -37,7 +37,7 @@ const shouldShowThumbnails = allVariantPhotos.length > 1;
       decoding="async"
       id="product__thumbs--current"
       inferSize
-      loading="eager"
+      loading="lazy"
       src={getMainPhotoUrl(mainPhotoSrc)}
     />
   </div>
