--- a/src/components/ui/menu-button.astro
+++ b/src/components/ui/menu-button.astro
@@ -19,7 +19,7 @@ const MENU_BUTTON_SIZE = 50;
     alt="Open menu"
     class="icon-open"
     height={MENU_BUTTON_SIZE}
-    loading="eager"
+    loading="lazy"
     src={hamburgerMenu}
     width={MENU_BUTTON_SIZE}
   />
@@ -27,7 +27,7 @@ const MENU_BUTTON_SIZE = 50;
     alt="Close menu"
     class="icon-close"
     height={MENU_BUTTON_SIZE}
-    loading="eager"
+    loading="lazy"
     src={close}
     width={MENU_BUTTON_SIZE}
   />
