--- a/src/components/ui/disclaimer.astro
+++ b/src/components/ui/disclaimer.astro
@@ -1,7 +1,3 @@
----
-type Props = {};
----
-
 <div class="disclaimer">
   <slot />
 </div>
@@ -12,7 +8,7 @@ type Props = {};
     align-items: center;
     justify-content: center;
     position: fixed;
-    bottom: 40%;
+    top: 40%;
     left: 1px;
     width: 150px;
     height: 150px;
