--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -1,11 +1,14 @@
 ---
+import { type CollectionEntry, getCollection } from "astro:content";
+import { renderRichTextToPlainText } from "@/lib/rich-text";
+
 import type { Product } from "@/schemas/contentful-transformed.types";
+
+import { getMainPhotoUrl } from "@/utils";
 
 import Contacts from "@/components/contacts.astro";
 import ProductPage from "@/components/product/product-page.astro";
-import Layout from "@/layouts/Layout.astro";
-import { type CollectionEntry, getCollection } from "astro:content";
-import { renderRichTextToPlainText } from "@/lib/rich-text";
+import Layout from "@/layouts/layout.astro";
 
 type Props = { product: Product };
 
@@ -27,6 +30,7 @@ const { product } = Astro.props;
 ---
 
 <Layout
+  image={getMainPhotoUrl(product.mainPhoto?.url)}
   description={renderRichTextToPlainText(product.description)}
   title={product.title}>
   <ProductPage product={product} />
