--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,11 +7,12 @@ import "@/styles/normalize.css";
 import "@/styles/global.css";
 
 type Props = {
+  image?: string;
   title: string;
   description: string;
 };
 
-const { title, description } = Astro.props;
+const { image, title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -19,18 +20,23 @@ const { title, description } = Astro.props;
   <head>
     <!-- TODO add meta info -->
     <meta charset="UTF-8" />
-    <meta content="Astro description" name="description" />
     <meta content="width=device-width" name="viewport" />
-    <meta content={description} name="description" />
-    <meta content="brameda, spa, džiovyklė, antbačiai" name="keywords" />
+    <meta
+      content="brameda, spa, džiovyklė, antbačiai, pėdų dezinfekatorius"
+      name="keywords"
+    />
+    <meta content={image} property="og:image" />
     <meta content={title} property="og:title" />
+    <meta content={description} name="description" />
     <meta content={description} property="og:description" />
     <meta content="website" property="og:type" />
     <meta content={Astro.url} property="og:url" />
-    <link href="/sitemap-index.xml" rel="sitemap" />
-    <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
     <meta content={Astro.generator} name="generator" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link href="/sitemap-index.xml" rel="sitemap" />
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="canonical" href={Astro.url} />
+    <link rel="preconnect" href="https://images.ctfassets.net" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
