adjust title margin and animation scaling

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -30,9 +30,8 @@ const headerLinks = [
   .header {
     background-color: var(--color-white);
     position: sticky;
-    top: 0;
-    left: 0;
-    box-shadow: transparent;
+    inset-block-start: 0;
+    inset-inline: 0;
     anchor-name: --header;
     z-index: 100;
 
