--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -8,7 +8,7 @@ import { getMainPhotoUrl } from "@/utils";
 
 import Contacts from "@/components/contacts.astro";
 import ProductPage from "@/components/product/product-page.astro";
-import Layout from "@/layouts/layout.astro";
+import Layout from "@/layouts/Layout.astro";
 
 type Props = { product: Product };
 
