--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,16 +1,16 @@
 ---
 import ContentBlock from "./ui/content-block.astro";
+import RichText from "./ui/rich-text.astro";
+import { contentfulClient } from "@/lib/contentful/client";
+import type { TypeAboutUsSkeleton } from "@/types/contentful";
+
+const entry = await contentfulClient.getEntry<TypeAboutUsSkeleton>(
+  "35kolZTRCPaSzpJAEPhFrw"
+);
+
+const aboutUs = entry.fields.aboutUs;
 ---
 
 <ContentBlock appearanceMode="dark" as="article" id="about" title="Apie mus">
-  <p class="about-paragraph">
-    Platiname pažangias avalynę padengiančias mašinas, firmos Swimsuit Dryers
-    Company maudymosi kostiumėlių džiovintuvus, modernius pėdų dezinfekatorius.
-    <br />
-    <br />
-    UAB „Brameda“ savo veiklą pradėjo 1991 m. Šiuo metu atstovaujame gerai žinomus
-    prekių ženklus. Platiname Anglijos gamintojo „Swimsuit Dryers Company“ maudymosi
-    kostiumėlių džiovintuvus, „Quen“ pažangius avalynę padengiančius aparatus, Vokietijos
-    gamintojo „Ophardt“ modernius pėdų dezinfekatorius.
-  </p>
+  <RichText doc={aboutUs} />
 </ContentBlock>
