--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import About from "@/components/about.astro";
 import Contacts from "@/components/contacts.astro";
 import ProductList from "@/components/product/product-list.astro";
-import Layout from "@/layouts/layout.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
