--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
-import Footer from "@/components/footer.astro";
+import { Font } from "astro:assets";
+
 import Header from "@/components/header.astro";
+import Footer from "@/components/footer.astro";
 import Disclaimer from "@/components/ui/disclaimer.astro";
 
 import "@/styles/normalize.css";
@@ -36,6 +38,7 @@ const { image, title, description } = Astro.props;
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="canonical" href={Astro.url} />
     <link rel="preconnect" href="https://images.ctfassets.net" crossorigin />
+    <Font cssVariable="--font-roboto" preload />
     <title>{title}</title>
   </head>
   <body>
