--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import { Font } from "astro:assets";
-
 import Header from "@/components/header.astro";
 import Footer from "@/components/footer.astro";
 import Disclaimer from "@/components/ui/disclaimer.astro";
@@ -38,7 +36,12 @@ const { image, title, description } = Astro.props;
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="canonical" href={Astro.url} />
     <link rel="preconnect" href="https://images.ctfassets.net" crossorigin />
-    <Font cssVariable="--font-roboto" preload />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>{title}</title>
   </head>
   <body>
