--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,7 +55,7 @@ html {
 }
 
 body {
-  font-family: var(--font-roboto);
+  font-family: "Roboto", sans-serif;
   color: var(--color-grey-dark2);
   background: var(--color-white);
   min-height: 100vh;
